# chess-board

./: README.md  Untitled.ipynb  chess_board.ipynb  pyproject.toml
chess_board/: chess_board.ipynb
